--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
+logging.level.root=INFO
+logging.level.com.github.arolfes=TRACE
 server.port=8090
+spring.banner.location=classpath:/banner.txt
+
 spring.application.name=MusicLibrary
+
 # Monitoring
 #
 management.server.port: 8081
