--- a/src/main/resources/application-override.properties
+++ b/src/main/resources/application-override.properties
@@ -5,9 +5,9 @@ spring.banner.location=classpath:/banner.txt
 
 spring.application.name=MusicLibrary
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3307/musiclibdb
+spring.datasource.username=musiclib
+spring.datasource.password=musiclib123
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
